--- a/main.html
+++ b/main.html
@@ -24,7 +24,19 @@
    <h1>datatypes in JavaScript</h1>
    <h1>Number Datatype</h1>
    <h1 id="numbers"></h1>
-   
+   <br>
+   <h1>Booleans Datatype</h1>
+   <h2>Display the value of Boolean</h2>
+   <h1 id="true"></h1>
+   <hr>
+   <!-- operators -->
+   <h1> Operators JavaScript</h1>
+   <h2>Arithmetic operator</h2>
+   <h1 id="Arithmetic"></h1>
+   <br>
+   <h2>Comparison operator</h2>
+   <h1 id="comparison"></h1>
+   <hr>
    <!-- strings -->
    <h1>Strings</h1>
    <h1 id="strings"></h1>
@@ -57,6 +69,7 @@
 <button onclick="displayDate(12/3/2024)">The time is?</button>
 <h1 id="event"></h1>
 <hr>
+<!-- form object -->
 <h1>Form Object</h1>
 <form id="form">
     <label for="name">Name</label>
@@ -68,8 +81,16 @@
     <input type="submit" value="Submit">
 </form>
 <hr>
+<!-- location object -->
 <h1>Location Object</h1>
 <button onclick="goToWebsite()">Go to Website </button>
+<hr>
+<!-- form validation -->
+<h1> JavaScript Form Validation</h1>
+<form name="myForm" onsubmit="return validateForm()" method="post">
+ Name: <input type="text" name="fname">
+ <input type="submit" value="Submit">
+</form>
 <script src="./main.js"></script>
     
 </body>
