--- a/main.html
+++ b/main.html
@@ -91,7 +91,24 @@
  Name: <input type="text" name="fname">
  <input type="submit" value="Submit">
 </form>
-<script src="./main.js"></script>
+<hr>
+<!--  conditonal statement-->
+<h1>conditional statement</h1>
+<h2>if statement</h2>
+<p id="if"></p>
+
+<h2>else statement</h2>
+<p id="else"></p>
+
+<h2>else if statement</h2>
+<p id="elseif"></p>
+
+<h2>switch statement</h2>
+<p id="switch"></p>
+<hr>
+
+
+<script src="main.js"></script>
     
 </body>
 </html>
